--- a/less/style.less
+++ b/less/style.less
@@ -23,11 +23,12 @@ body,html {
     border: 1px solid #888;
   }
 
-  button {
-    background: #666;
-    color: white;
-    border: 1px solid #888;
-  }
+}
+
+button,input,select,option {
+  background: #666;
+  color: white;
+  border: 1px solid #888;
 }
 
 #content {
@@ -66,6 +67,21 @@ body,html {
   }
 }
 
+label,input,button,select {
+  display: inline-block;
+  height: 1.75rem;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+label {
+  vertical-align: baseline;
+}
+
+input,button,select {
+  vertical-align: bottom;
+}
+
 #style-menu {
   position: fixed;
   width: 18rem;
@@ -73,6 +89,8 @@ body,html {
   right: 0;
   margin: 0;
   padding: 1rem;
+  line-height: 2rem;
+
   background: rgba(0,0,0,0.5);
 
   transition: opacity .5s ease-in-out;
